// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> should render with default props 1`] = `
<div
  className="mfui-banner mfui-banner_nav-theme_light"
>
  <Swiper
    autoplay={false}
    className="mfui-banner__swiper"
    loop={false}
    onAutoplayStop={[Function]}
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
  >
    <SwiperSlide
      className="mfui-banner__slide"
      key="0/.0"
    >
      <DemoSlide>
        1
      </DemoSlide>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-banner__slide"
      key="1/.1"
    >
      <DemoSlide>
        2
      </DemoSlide>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-banner__arrow mfui-banner__arrow_prev"
    disabled={true}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-banner__arrow mfui-banner__arrow_next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
  <div
    className="mfui-banner__pagination mfui-banner__pagination_theme_light"
  >
    <BannerDot
      className="mfui-banner__dot"
      dataAttrs={
        Object {
          "root": Object {},
        }
      }
      index={0}
      isActive={true}
      key="0/.0"
      onClick={[Function]}
      showTimer={false}
      timerDelay={5}
    />
    <BannerDot
      className="mfui-banner__dot"
      dataAttrs={
        Object {
          "root": Object {},
        }
      }
      index={1}
      isActive={false}
      key="1/.1"
      onClick={[Function]}
      showTimer={false}
      timerDelay={5}
    />
  </div>
</div>
`;

exports[`<Banner /> should render with props 1`] = `
<div
  className="mfui-banner mfui-banner_nav-theme_dark custom-class"
  data-test-id="test-id"
>
  <Swiper
    autoplay={
      Object {
        "delay": 1000,
        "disableOnInteraction": false,
        "stopOnLastSlide": true,
        "waitForTransition": false,
      }
    }
    className="mfui-banner__swiper"
    data-test-id="test-id"
    loop={true}
    onAutoplayStop={[Function]}
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
  >
    <SwiperSlide
      className="mfui-banner__slide slide"
      data-test-id="test-id[1]"
      key="0/.0"
    >
      <DemoSlide>
        1
      </DemoSlide>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-banner__slide slide"
      data-test-id="test-id[2]"
      key="1/.1"
    >
      <DemoSlide>
        2
      </DemoSlide>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-banner__arrow mfui-banner__arrow_prev arrows"
    data-test-id="test-id"
    disabled={false}
    onClick={[Function]}
    theme="dark"
  />
  <NavArrow
    className="mfui-banner__arrow mfui-banner__arrow_next arrows"
    data-test-id="test-id"
    disabled={false}
    onClick={[Function]}
    theme="dark"
    view="next"
  />
  <div
    className="mfui-banner__pagination mfui-banner__pagination_theme_dark"
    data-test-id="test-id"
  >
    <BannerDot
      className="mfui-banner__dot"
      dataAttrs={
        Object {
          "root": Object {
            "data-test-id": "test-id[1]",
          },
        }
      }
      index={0}
      isActive={true}
      key="0/.0"
      onClick={[Function]}
      showTimer={true}
      timerDelay={1}
    />
    <BannerDot
      className="mfui-banner__dot"
      dataAttrs={
        Object {
          "root": Object {
            "data-test-id": "test-id[2]",
          },
        }
      }
      index={1}
      isActive={false}
      key="1/.1"
      onClick={[Function]}
      showTimer={true}
      timerDelay={1}
    />
  </div>
</div>
`;
